<resources>
    <string name="app_name">Role&amp;Roll</string>
    <string name="title_activity_crear_personaje">CrearPersonaje</string>
    <string name="title_pdh_salvaciones">Tablas principales</string>
    <string name="title_habilidades">Tabla de habilidades</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_ficha_personaje">FichaPersonaje</string>

    <string-array name="Razas">
        <item>Elfo</item>
        <item>Enano</item>
        <item>Gnomo</item>
        <item>Humano</item>
        <item>Mediano</item>
        <item>Semielfo</item>
        <item>Semiorco</item>
    </string-array>

    <string-array name="Clases">
        <item>Bárbaro</item>
        <item>Bardo</item>
        <item>Clerigo</item>
        <item>Druida</item>
        <item>Explorador</item>
        <item>Guerrero</item>
        <item>Hechicero</item>
        <item>Mago</item>
        <item>Monje</item>
        <item>Paladín</item>
        <item>Pícaro</item>
    </string-array>

    <string-array name="Tamanno">
        <item>Pequeño</item>
        <item>Normal</item>
        <item>Grande</item>
    </string-array>

    <string-array name="Dados">
        <item>d100</item>
        <item>d20</item>
        <item>d12</item>
        <item>d10</item>
        <item>d8</item>
        <item>d6</item>
        <item>d4</item>
    </string-array>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>